working on style of navbar

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <body>
     <section id="landingpage">
       <nav>
-        <div class="landing__page__container">
           <figure>
             <img id="Nalini-logo" src="./assets/nalinilogo.png" alt="logo"/>
           </figure>
-          <ul class="nav__links--list">
+          <ul class="nav__link--list">
             <li class="nav__link">
               <a
                 href="#"
@@ -37,7 +36,6 @@
                 >Contact</a>
             </li>
           </ul>
-        </div>
       </nav>
     </section>
   </body>
