Working on navbar

--- a/index.html
+++ b/index.html
@@ -4,38 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-
+    <script
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Nalini Krishan Portfolio</title>
   </head>
   <body>
     <section id="landingpage">
       <nav>
-          <figure>
-            <img id="Nalini-logo" src="./assets/nalinilogo.png" alt="logo"/>
-          </figure>
-          <ul class="nav__link--list">
-            <li class="nav__link">
-              <a
-                href="#"
-                class="nav__link--anchor link__hover-effect link__hover-effect--black"
-                >About</a
-              >
-            </li>
+        <figure>
+          <img id="Nalini-logo" src="./assets/nalinilogo.png" alt="logo" />
+        </figure>
+        <ul class="nav__link--list">
+          <li class="nav__link">
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >About</a
+            >
+          </li>
 
-            <li class="nav__link">
-              <a
-                href="#"
-                class="nav__link--anchor link__hover-effect link__hover-effect--black"
-                >Projects</a>
-            </li>
+          <li class="nav__link">
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Projects</a
+            >
+          </li>
 
-            <li class="nav__link">
-              <a
-                href="#"
-                class="nav__link--anchor link__hover-effect link__hover-effect--black"
-                >Contact</a>
-            </li>
-          </ul>
+          <li class="nav__link">
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Contact</a
+            >
+          </li>
+
+          <li class="nav__link">
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              ><i class="fa-sharp fa-solid fa-circle-half-stroke"></i>
+            </a>
+          </li>
+        </ul>
       </nav>
     </section>
   </body>
