Working on advanced portfolio

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script
-      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      src="https://kit.fontawesome.com/e995974119.js"
       crossorigin="anonymous"
     ></script>
     <title>Nalini Krishan Portfolio</title>
   </head>
   <body>
-    <section id="landingpage">
+    <section id="landing-page">
       <nav>
         <figure>
           <img id="Nalini-logo" src="./assets/nalinilogo.png" alt="logo" />
@@ -45,11 +45,42 @@
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              ><i class="fa-sharp fa-solid fa-circle-half-stroke"></i>
+              ><i class="fa-solid fa-circle-half-stroke"></i>
             </a>
           </li>
         </ul>
       </nav>
+
+      <header class="header">
+        <div class="header__content">
+          <h1 class="title">Hey</h1>
+          <h1 class="title title-secondary">
+            <span class="text-blue">I'm Nalini</span>
+          </h1>
+          <p class="header__para">
+            I am a <span class="text-blue">Front-End Software Engineer</span>
+            with a strong aptitude for building websites, enhancing the user
+            experience.
+            <br />
+            Here is a bit more <span class="text-blue">about me.</span>
+            <!-- I am a quick learner and can pick up new tech stacks as needed. I believe that being 
+            a great developer is not using one specific language, or choosing many tools, but tapping
+            into your creativity to bring websites to life!  -->
+          </p>
+          <div class="social__list">
+            <a href="https://google.com" target="_blank" class="social__link click ">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+
+              <a href="https://google.com" target="_blank" class="social__link">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://google.com" target="_blank" class="social__link">
+                <i class="fa-regular fa-file-pdf"></i>
+            </a>
+          </div>
+        </div>
+      </header>
     </section>
   </body>
 </html>
