--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             >
           </li>
 
-          <li class="nav__link">
+          <li class="nav__link click">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -63,24 +63,193 @@
             experience.
             <br />
             Here is a bit more <span class="text-blue">about me.</span>
-            <!-- I am a quick learner and can pick up new tech stacks as needed. I believe that being 
-            a great developer is not using one specific language, or choosing many tools, but tapping
-            into your creativity to bring websites to life!  -->
           </p>
           <div class="social__list">
-            <a href="https://google.com" target="_blank" class="social__link click ">
+            <a
+              href="https://google.com"
+              target="_blank"
+              class="social__link click"
+            >
               <i class="fa-brands fa-linkedin-in"></i>
             </a>
 
-              <a href="https://google.com" target="_blank" class="social__link">
-                <i class="fa-brands fa-github"></i>
-              </a>
-              <a href="https://google.com" target="_blank" class="social__link">
-                <i class="fa-regular fa-file-pdf"></i>
+            <a href="https://google.com" target="_blank" class="social__link">
+              <i class="fa-brands fa-github"></i>
+            </a>
+            <a
+              href="./assets/FSD Resume - Nalini Krishan 2024.pdf"
+              target="_blank"
+              download
+              class="social__link"
+            >
+              <i class="fa-regular fa-file-pdf"></i>
             </a>
           </div>
         </div>
       </header>
+
+      <button class="mail__btn click">
+        <i class="fa-regular fa-envelope"></i>
+      </button>
+      <a href="projects" class="scroll">
+        <div class="scroll__icon click"></div>
+      </a>
     </section>
+
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="text-blue">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/treact project.jpg"
+                  class="project__img"
+                  alt="Treact Clone"
+                />
+              </div>
+              <div class="project__wrapper--bg"></div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  Treact Clone Project
+                </h3>
+                <h4 class="project__description--sub-title">
+                  HTML, CSS, JavaScript
+                </h4>
+                <p class="project__description--para">
+                  Created clone of an existing website. Treact Clone was created
+                  with a combination of HTML, CSS and JavaScript.
+                </p>
+                <div class="project__description--links">
+                  <a href="#" class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="project__description--link">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/Portfolio.gif"
+                  class="project__img"
+                  alt="My Portfolio"
+                />
+              </div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  My Portfolio Project
+                </h3>
+                <h4 class="project__description--sub-title">
+                  HTML, CSS, JavaScript
+                </h4>
+                <p class="project__description--para">
+                  Created portfolio of my projects. My Project Portfolio was
+                  created with a combination of HTML, CSS and JavaScript.
+                </p>
+                <div class="project__description--links">
+                  <a href="#" class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="project__description--link">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/swgameimage.gif"
+                  class="project__img"
+                  alt="Star Wars Memory Game"
+                />
+              </div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  Star Wars Memory Game
+                </h3>
+                <h4 class="project__description--sub-title">
+                  HTML, CSS, JavaScript
+                </h4>
+                <p class="project__description--para">
+                  Created a Star Wars memory game. The Star Wars game was
+                  created with a combination of HTML, CSS and JavaScript.
+                </p>
+                <div class="project__description--links">
+                  <a href="#" class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="project__description--link">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/advanced Portfolio.jpg"
+                  class="project__img"
+                  alt="Advanced Portfolio"
+                />
+              </div>
+              <div class="project__description">
+                <h3 class="project__description--title">Advanced Portfolio</h3>
+                <h4 class="project__description--sub-title">
+                  HTML, CSS, JavaScript
+                </h4>
+                <p class="project__description--para">
+                  Created an Advanced Portfolio site, this is a combination of
+                  some of my major projects completed. The advanced portfolio
+                  was created with a combination of HTML, CSS and JavaScript.
+                </p>
+                <div class="project__description--links">
+                  <a href="#" class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="project__description--link">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/coming soon img.jpg"
+                  class="project__img"
+                  alt="Star Wars Memory Game"
+                />
+              </div>
+              <div class="project__description">
+                <h3 class="project__description--title">Upcoming Project</h3>
+                <h4 class="project__description--sub-title">
+                  HTML, CSS, JavaScript
+                </h4>
+                <p class="project__description--para">
+                  This website is currently under construction.
+                </p>
+                <div class="project__description--links">
+                  <a href="#" class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="project__description--link">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer"></section>
   </body>
 </html>
