--- a/index.html
+++ b/index.html
@@ -111,25 +111,26 @@
                   alt="Treact Clone"
                 />
               </div>
-              <div class="project__wrapper--bg"></div>
-              <div class="project__description">
-                <h3 class="project__description--title">
-                  Treact Clone Project
-                </h3>
-                <h4 class="project__description--sub-title">
-                  HTML, CSS, JavaScript
-                </h4>
-                <p class="project__description--para">
-                  Created clone of an existing website. Treact Clone was created
-                  with a combination of HTML, CSS and JavaScript.
-                </p>
-                <div class="project__description--links">
-                  <a href="#" class="project__description--link">
-                    <i class="fab fa-github"></i>
-                  </a>
-                  <a href="#" class="project__description--link">
-                    <i class="fas fa-link"></i>
-                  </a>
+              <div class="project__wrapper--bg">
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Treact Clone Project
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript
+                  </h4>
+                  <p class="project__description--para">
+                    Created clone of an existing website. Treact Clone was
+                    created with a combination of HTML, CSS and JavaScript.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </li>
@@ -141,24 +142,26 @@
                   alt="My Portfolio"
                 />
               </div>
-              <div class="project__description">
-                <h3 class="project__description--title">
-                  My Portfolio Project
-                </h3>
-                <h4 class="project__description--sub-title">
-                  HTML, CSS, JavaScript
-                </h4>
-                <p class="project__description--para">
-                  Created portfolio of my projects. My Project Portfolio was
-                  created with a combination of HTML, CSS and JavaScript.
-                </p>
-                <div class="project__description--links">
-                  <a href="#" class="project__description--link">
-                    <i class="fab fa-github"></i>
-                  </a>
-                  <a href="#" class="project__description--link">
-                    <i class="fas fa-link"></i>
-                  </a>
+              <div class="project__wrapper--bg">
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    My Portfolio Project
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript
+                  </h4>
+                  <p class="project__description--para">
+                    Created portfolio of my projects. My Project Portfolio was
+                    created with a combination of HTML, CSS and JavaScript.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </li>
@@ -170,24 +173,26 @@
                   alt="Star Wars Memory Game"
                 />
               </div>
-              <div class="project__description">
-                <h3 class="project__description--title">
-                  Star Wars Memory Game
-                </h3>
-                <h4 class="project__description--sub-title">
-                  HTML, CSS, JavaScript
-                </h4>
-                <p class="project__description--para">
-                  Created a Star Wars memory game. The Star Wars game was
-                  created with a combination of HTML, CSS and JavaScript.
-                </p>
-                <div class="project__description--links">
-                  <a href="#" class="project__description--link">
-                    <i class="fab fa-github"></i>
-                  </a>
-                  <a href="#" class="project__description--link">
-                    <i class="fas fa-link"></i>
-                  </a>
+              <div class="project__wrapper--bg">
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Star Wars Memory Game
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript
+                  </h4>
+                  <p class="project__description--para">
+                    Created a Star Wars memory game. The Star Wars game was
+                    created with a combination of HTML, CSS and JavaScript.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </li>
@@ -199,23 +204,27 @@
                   alt="Advanced Portfolio"
                 />
               </div>
-              <div class="project__description">
-                <h3 class="project__description--title">Advanced Portfolio</h3>
-                <h4 class="project__description--sub-title">
-                  HTML, CSS, JavaScript
-                </h4>
-                <p class="project__description--para">
-                  Created an Advanced Portfolio site, this is a combination of
-                  some of my major projects completed. The advanced portfolio
-                  was created with a combination of HTML, CSS and JavaScript.
-                </p>
-                <div class="project__description--links">
-                  <a href="#" class="project__description--link">
-                    <i class="fab fa-github"></i>
-                  </a>
-                  <a href="#" class="project__description--link">
-                    <i class="fas fa-link"></i>
-                  </a>
+              <div class="project__wrapper--bg">
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Advanced Portfolio
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript
+                  </h4>
+                  <p class="project__description--para">
+                    Created an Advanced Portfolio site, this is a combination of
+                    some of my major projects completed. The advanced portfolio
+                    was created with a combination of HTML, CSS and JavaScript.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </li>
@@ -227,21 +236,24 @@
                   alt="Star Wars Memory Game"
                 />
               </div>
-              <div class="project__description">
-                <h3 class="project__description--title">Upcoming Project</h3>
-                <h4 class="project__description--sub-title">
-                  HTML, CSS, JavaScript
-                </h4>
-                <p class="project__description--para">
-                  This website is currently under construction.
-                </p>
-                <div class="project__description--links">
-                  <a href="#" class="project__description--link">
-                    <i class="fab fa-github"></i>
-                  </a>
-                  <a href="#" class="project__description--link">
-                    <i class="fas fa-link"></i>
-                  </a>
+              <div class="project__wrapper--bg">
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Upcoming Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript
+                  </h4>
+                  <p class="project__description--para">
+                    This website is currently under construction.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </li>
@@ -250,6 +262,29 @@
       </div>
     </section>
 
-    <section class="footer"></section>
+    <footer>
+      <div class="container">
+        <figure>
+          <img src="./assets/logo.svg" />
+        </figure>
+        <div class="footer__social--list">
+          <a href="#" class="footer__social--link link__hover-effect  link__hover-effect-white">
+            Github
+          </a>
+          <a href="#" class="footer__social--link link__hover-effect  link__hover-effect-white">
+            LinkedIn
+          </a>
+          <a href="#" class="footer__social--link link__hover-effect  link__hover-effect-white">
+            Contact
+          </a>
+          <a href="#" class="footer__social--link link__hover-effect  link__hover-effect-white">
+            Resume
+          </a>
+        </div>
+        <div class="footer__copyright">
+          Copyright © 2024 Nalini Krishan
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
