--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
       crossorigin="anonymous"
     ></script>
     <title>Nalini Krishan Portfolio</title>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "o2MKta5yqq3mx3fcW",
+      });
+   })();
+</script>
   </head>
+
   <body>
     <section id="landing-page">
       <nav>
