--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@
         </div>
       </header>
 
-      <button class="mail__btn click" onclick="toggleModal">
+      <a href="#">
+      <button class="mail__btn click" onclick="toggleModal()">
         <i class="fa-regular fa-envelope"></i>
       </button>
+      </a>
       <a href="projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
@@ -384,25 +386,25 @@
         </figure>
         <div class="footer__social--list">
           <a
-            href="#"
+            href="https://github.com/Nalinaka" target="_blank"
             class="footer__social--link link__hover-effect link__hover-effect-white"
           >
             GitHub
           </a>
           <a
-            href="#"
+            href="https://www.linkedin.com/in/nalinionair/" target="_blank"
             class="footer__social--link link__hover-effect link__hover-effect-white"
           >
             LinkedIn
           </a>
           <a
-            href="#"
+            href="#" onclick="toggleModal()" class=""
             class="footer__social--link link__hover-effect link__hover-effect-white"
           >
             Contact
           </a>
           <a
-            href="#"
+            href="./assets/FSD Resume - Nalini Krishan 2024.pdf" target="_blank"
             class="footer__social--link link__hover-effect link__hover-effect-white"
           >
             Resume
