--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
           </p>
           <div class="social__list">
             <a
-              href="https://google.com"
+              href="https://www.linkedin.com/in/nalinionair/"
               target="_blank"
               class="social__link click"
             >
               <i class="fa-brands fa-linkedin-in"></i>
             </a>
 
-            <a href="https://google.com" target="_blank" class="social__link">
+            <a href="https://github.com/Nalinaka" target="_blank" class="social__link">
               <i class="fa-brands fa-github"></i>
             </a>
             <a
@@ -399,7 +399,7 @@
           </a>
           <a
             href="#" onclick="toggleModal()" class=""
-            class="footer__social--link link__hover-effect link__hover-effect-white"
+            class="footer__social--link2 link__hover-effect link__hover-effect-white"
           >
             Contact
           </a>
