--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@
                   class="project__img"
                   alt="Treact Clone"
                 />
-              </div>
-              <div class="project__wrapper--bg">
+
+
+              <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">
                     Treact Clone Project
@@ -241,15 +242,16 @@
                   </p>
                   <div class="project__description--links">
                     <a href="#" class="project__description--link">
+                      
                       <i class="fab fa-github"></i>
                     </a>
                     <a href="#" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
+                  </div>
                 </div>
-              </div>
-            </li>
+              </li>
             <li class="project">
               <div class="project__wrapper">
                 <img
@@ -257,8 +259,7 @@
                   class="project__img"
                   alt="My Portfolio"
                 />
-              </div>
-              <div class="project__wrapper--bg">
+              <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">
                     My Portfolio Project
@@ -288,8 +289,7 @@
                   class="project__img"
                   alt="Star Wars Memory Game"
                 />
-              </div>
-              <div class="project__wrapper--bg">
+              <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">
                     Star Wars Memory Game
@@ -319,8 +319,7 @@
                   class="project__img"
                   alt="Advanced Portfolio"
                 />
-              </div>
-              <div class="project__wrapper--bg">
+              <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">
                     Advanced Portfolio
@@ -351,8 +350,8 @@
                   class="project__img"
                   alt="Star Wars Memory Game"
                 />
-              </div>
-              <div class="project__wrapper--bg">
+
+              <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">Upcoming Project</h3>
                   <h4 class="project__description--sub-title">
