Fixed some aesthetics on advanced portfolio

--- a/index.html
+++ b/index.html
@@ -222,12 +222,10 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/treact project.jpg"
+                  src="./assets/Treact Project img2.jpg"
                   class="project__img"
                   alt="Treact Clone"
                 />
-
-
               <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">
@@ -241,21 +239,22 @@
                     created with a combination of HTML, CSS and JavaScript.
                   </p>
                   <div class="project__description--links">
-                    <a href="#" class="project__description--link">
+                    <a href="https://github.com/Nalinaka/Treact-Clone" class="project__description--link">
                       
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="project__description--link">
+                    <a href="https://nalinaka.github.io/Treact-Clone/" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
                   </div>
                 </div>
               </li>
+
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/Portfolio.gif"
+                  src="./assets/portfolio image 2.jpg"
                   class="project__img"
                   alt="My Portfolio"
                 />
@@ -272,20 +271,21 @@
                     created with a combination of HTML, CSS and JavaScript.
                   </p>
                   <div class="project__description--links">
-                    <a href="#" class="project__description--link">
+                    <a href="https://github.com/Nalinaka/nalinikrishanportfolio" class="project__description--link">
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="project__description--link">
+                    <a href="https://nalinaka.github.io/nalinikrishanportfolio/" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
                 </div>
               </div>
             </li>
+
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/swgameimage.gif"
+                  src="./assets/SW memory game img 3.jpg"
                   class="project__img"
                   alt="Star Wars Memory Game"
                 />
@@ -302,16 +302,17 @@
                     created with a combination of HTML, CSS and JavaScript.
                   </p>
                   <div class="project__description--links">
-                    <a href="#" class="project__description--link">
+                    <a href="https://github.com/Nalinaka/Memory-Game" class="project__description--link">
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="project__description--link">
+                    <a href="https://nalinaka.github.io/Memory-Game/" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
                 </div>
               </div>
             </li>
+
             <li class="project">
               <div class="project__wrapper">
                 <img
@@ -333,24 +334,24 @@
                     was created with a combination of HTML, CSS and JavaScript.
                   </p>
                   <div class="project__description--links">
-                    <a href="#" class="project__description--link">
+                    <a href="https://github.com/Nalinaka/Advanced-Portfolio" class="project__description--link">
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="project__description--link">
+                    <a href="https://nalinaka.github.io/Advanced-Portfolio/" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
                 </div>
               </div>
             </li>
+
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/coming soon img.jpg"
+                  src="./assets/i love cats site.jpg"
                   class="project__img"
-                  alt="Star Wars Memory Game"
+                  alt="Ilovecats"
                 />
-
               <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">Upcoming Project</h3>
@@ -361,7 +362,7 @@
                     This website is currently under construction.
                   </p>
                   <div class="project__description--links">
-                    <a href="#" class="project__description--link">
+                    <a href="https://github.com/Nalinaka/Ilovecats" class="project__description--link">
                       <i class="fab fa-github"></i>
                     </a>
                     <a href="#" class="project__description--link">
