Fixing resume and mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
               Contact
             </a>
             <a
-              href="./assets/FSD Resume - Nalini Krishan 2024.pdf"
+              href="./assets/Nalini Krishan Resume.docx.pdf"
               target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect-white"
             >
