--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@
               <i class="fa-brands fa-github"></i>
             </a>
             <a
-              href="./assets/FSD Resume - Nalini Krishan 2024.pdf"
+              href="./assets/Nalini Krishan Resume.pdf.pdf"
               target="_blank"
-              download
               class="social__link"
             >
               <i class="fa-regular fa-file-pdf"></i>
