Fixing website links and issues

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/ilovecats_underconstruction.jpg"
+                  src="./assets/Cat home page image.jpg"
                   class="project__img"
                   alt="Ilovecats"
                 />
@@ -389,11 +389,12 @@
                     HTML, CSS, JavaScript
                   </h4>
                   <p class="project__description--para">
-                    This website is currently under construction.
+                    Created a cat adoption agency to display, sort filters,
+                    search filters and access to API database. 
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://github.com/Nalinaka/Ilovecats"
+                      href="https://nalinaka.github.io/Ilovecats/"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
