I love cats fixed

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 />
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
-                  <h3 class="project__description--title">Upcoming Project</h3>
+                  <h3 class="project__description--title">I Love Cats</h3>
                   <h4 class="project__description--sub-title">
                     HTML, CSS, JavaScript
                   </h4>
@@ -394,12 +394,12 @@
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://nalinaka.github.io/Ilovecats/"
+                      href="https://github.com/Nalinaka/Ilovecats"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="project__description--link">
+                    <a href="https://nalinaka.github.io/Ilovecats/" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
