Adding additional projects in portfolio

--- a/index.html
+++ b/index.html
@@ -266,31 +266,30 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/portfolio image 2.jpg"
+                  src="./assets/Saas landing page image .jpg"
                   class="project__img"
-                  alt="My Portfolio"
+                  alt="Saas Landing Page"
                 />
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">
-                    My Portfolio Project
+                    Saas Landing Page - Coming soon!
                   </h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript
+                    HTML, CSS, JavaScript, Nextjs
                   </h4>
                   <p class="project__description--para">
-                    Created portfolio of my projects. My Project Portfolio was
-                    created with a combination of HTML, CSS and JavaScript.
+                    Saas Landing Page
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://github.com/Nalinaka/nalinikrishanportfolio"
+                      href="add link"
                       class="project__description--link"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
-                      href="https://nalinaka.github.io/nalinikrishanportfolio/"
+                      href="add link"
                       class="project__description--link"
                     >
                       <i class="fas fa-link"></i>
@@ -299,6 +298,79 @@
                 </div>
               </div>
             </li>
+
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/google mockup.png"
+                  class="project__img"
+                  alt="Google Drive"
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Google Drive Clone - Coming soon!
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Nextjs
+                  </h4>
+                  <p class="project__description--para">
+                    Creating Google Drive Clone. 
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="add link"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a
+                      href="add link"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+
+
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/google mockup.png"
+                  class="project__img"
+                  alt="Another Project"
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Another Project - Coming soon!
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Nextjs
+                  </h4>
+                  <p class="project__description--para">
+                    Details coming soon... 
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="add link"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a
+                      href="add link"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li> 
 
             <li class="project">
               <div class="project__wrapper">
