Updated list of projects

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/google mockup.png"
+                  src="./assets/google drive clone.jpg"
                   class="project__img"
                   alt="Google Drive"
                 />
